--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -177,7 +177,7 @@ body {
 }
 
 #stats[data-species="Djinni"] #stats_contamline {
-    display:block;
+    display:none;
     visibility:hidden;
 }
 /* Hide MP bar */
