--- a/crawl-ref/source/webserver/game_data/templates/game.html
+++ b/crawl-ref/source/webserver/game_data/templates/game.html
@@ -94,8 +94,8 @@
             <span id="stats_progress" />%</div>
           <div><span class="stats_caption">Gold:</span>
             <span id="stats_gold" /></div>
-          <div><span class="stats_caption">To hit:</span>
-              <span id="stats_tohit" /></div>
+          <div><span class="stats_caption">Be hit chance:</span>
+              <span id="stats_be_hit_chance" /></div>
         </div>
         <div id="stats_rightcolumn" style="float:right;width:55%;">
           <div><span class="stats_caption">Str:</span>
@@ -108,8 +108,8 @@
             <span id="stats_place" /></div>
           <div><span class="stats_caption" id="stats_time_caption"></span>
             <span id="stats_time" /></div>
-          <div><span class="stats_caption">Hit Chance:</span>
-              <span id="stats_hit_chance" /></div>
+          <div><span class="stats_caption">To hit chance:</span>
+              <span id="stats_to_hit_chance" /></div>
         </div>
         <div><span class="stats_caption" id="stats_weapon_letter"></span>
           <span id="stats_weapon" /></div>
